--- a/sass/layout/_client.scss
+++ b/sass/layout/_client.scss
@@ -92,6 +92,8 @@
     left: 125%;
     width: inherit;
     opacity: 0;
+    font-family: "Barlow Semi Condensed", sans-serif;
+    font-weight: 300;
     text-align: center;
     transition: all 1.5s;
 
@@ -107,7 +109,7 @@
   }
 
   &__quote {
-    font-size: 1.6rem;
+    font-size: 1.8rem;
     font-style: italic;
 
     p {
@@ -126,13 +128,13 @@
   &__name {
     display: inline-block;
     margin: 3rem 0 0 0;
-    font-size: 1.8rem;
+    font-size: 2rem;
     font-weight: 400;
 
     span {
       display: block;
       margin-top: 0.3rem;
-      font-size: 1.4rem;
+      font-size: 1.6rem;
       font-weight: 500;
     }
   }
